--- a/public_html/admin/book_info.html
+++ b/public_html/admin/book_info.html
@@ -23,17 +23,17 @@ and open the template in the editor.
             </div>
             <div data-role="main" class="ui-content" id="window">
                 <label>ISBN:</label>
-                <input type="text" id="isbn" data-theme="a">
+                <input type="text" id="ISBN" data-theme="a">
                 <label>Title:</label>
                 <input type="text" id="title" data-theme="a">
                 <label>Price:</label>
                 <input type="text" id="price" data-theme="a">
-                <label>Publisher:</label>
-                <input type="text" id="publisher" data-theme="a">
+                <label>Publisher ID:</label>
+                <input type="text" id="publisher_ID" data-theme="a">
                 <label>Date published</label>
-                <input type="text" id="date" data-theme="a">
+                <input type="text" id="date_published" data-theme="a">
                 <label>Genre</label>
-                <input type="text" id="genre" data-theme="a">
+                <input type="text" id="name" data-theme="a">
                 <div align="right">
                     <a href="#" class="ui-btn ui-btn-inline">Search</a>
                     <a href="#" class="ui-btn ui-btn-inline">Add</a>
