--- a/public_html/customer/search.html
+++ b/public_html/customer/search.html
@@ -21,7 +21,7 @@ and open the template in the editor.
             </div>
             <div data-role="main" class="ui-content" id="window">
                 <label>ISBN:</label>
-                <input type="text" id="isbn" data-theme="a">
+                <input type="text" id="ISBN" data-theme="a">
                 <label>Title:</label>
                 <input type="text" id="title" data-theme="a">
                 <label>Price:</label>
@@ -29,7 +29,7 @@ and open the template in the editor.
                 <label>Publisher:</label>
                 <input type="text" id="publisher" data-theme="a" disabled>
                 <label>Date published</label>
-                <input type="text" id="date" data-theme="a" disabled>
+                <input type="text" id="date_published" data-theme="a" disabled>
                 <label>Genre</label>
                 <input type="text" id="genre" data-theme="a" disabled>
                 <div align="right">
