--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,8 @@ and open the template in the editor.
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
         <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        
+        <script src="js/login.js"></script>
     </head>
     <body>
         <div data-role="page" data-theme="a">
@@ -25,7 +27,7 @@ and open the template in the editor.
                     <label>Password:</label>
                     <input type="password" id="password" data-theme="a">
                     <div align="right">
-                    <a href="#" class="ui-btn ui-btn-inline">Login</a>
+                        <a href="#" class="ui-btn ui-btn-inline" onclick="login()">Login</a>
                     </div>
                 </div>
             </div>
