--- a/public_html/admin/report.html
+++ b/public_html/admin/report.html
@@ -13,15 +13,16 @@ and open the template in the editor.
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
         <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        
+        <script src="../js/report.js"></script>
     </head>
-    <body>
+    <body onload="display('reorder')">
         <div data-role="page">
             <div data-role="header" class="ui-content">
                 <h1>Report</h1>
             </div>
             <div data-role="main" class="ui-content" id="window">
-                <select id="table">
-                    <option></option>
+                <select id="table" onchange="display(this.value)" >
                     <option value="reorder">Books Reorder Level</option>
                     <option value="active">Active Customers</option>
                     <option value="unactive">Less Active Customers</option>
